# exa_search

./: LICENSE
backend/: README.md  pyproject.toml  requirements.txt  sql_app.db
backend/api/: database.py  main.py
backend/api/crud/: __init__.py  crud_history.py  crud_user.py
backend/api/models/: history.py  user.py
backend/api/routers/: __init__.py  history.py  user.py  users.py
backend/api/schemas/: history.py  user.py
backend/api/utils/: __init__.py  utils.py
frontend/: bun.lockb  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/login/: Login.tsx
frontend/app/login/: page.tsx
