[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hydris Bessa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
sqlmodel = "^0.0.19"
bcrypt = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
